extensions-builtin/anapnoe-sd-uiux/style.css
/* ... */
.gradio-audio > .wrap, 
.gradio-video > .wrap, 
.gradio-file > .wrap, 
.gradio-image > .wrap,
.wrap.center.full.translucent{
    min-height: unset;
    position: absolute;
    z-index: 100;
    height: auto;
    width: auto;
}

div#quicksettings {
    flex-direction: row;
    display: inline-flex;
    gap: var(--ae-gap-size);
    flex-wrap: wrap;
}
div#quicksettings > div {
    flex: 1 0 calc(100% - var(--ae-input-height) * 2);
}
div#quicksettings div + button {
    flex: 0 1 0%;
    margin-bottom: var(--ae-panel-padding);
}

.relative{
    position:relative;
}
.accordion-vertical.expand {
    flex-grow: 1 !important;
}

.no-grow{
    flex-grow: 0;
}
#sidebar_secondary_tabs{
    justify-content: flex-end;
}

#pnginfo_image .center.boundedheight.flex{
    display: flex;
    align-items: center;
    text-align: center;
}

.gradio-colorpicker label {
    flex-direction: row;
    align-items: center;
    pointer-events: none;
}
.gradio-colorpicker input {
    pointer-events: all;
}

input[type="radio"], 
input[type="checkbox"] { 
    accent-color: var(--ae-primary-color);
    cursor: pointer;
}
.selected span.name {
    color: var(--ae-input-hover-text-color);
}
#txt2img_edit_style_close,
#lightboxModal,
.gradio-container.app{
    display:none !important;
}

.icon-physton {
    -webkit-mask-image: url(./html/svg/pantone-line.svg);
}
.physton-prompt {
    margin: 0 !important;
}
.physton-prompt .prompt-header .prompt-header-extend.prompt-append {
    min-width:240px;
    min-height: 26px;
}

.physton-prompt .prompt-header .prompt-header-extend .extend-content .gradio-checkbox{
    display:none;
}

.physton-prompt .show-group-tags{
    top: -15px;
    right: 5px;
}
.physton-prompt .prompt-header .prompt-header-extend.prompt-append .extend-content {
    margin-right: 20px;
}
#train_tabitem .tabs{
    width:100%;
}
#setting_uiux_ignore_overrides {
    min-width: 100%;
}
#img2img_override_settings,
#txt2img_override_settings{
    display:flex !important;
}

@-webkit-keyframes fade-out {
    0% {
        opacity: 1;
       /*  transform: scale(1.0); */
    }

    100% {
        opacity: 0;
       /*  transform: scale(0.5); */
    }
}

@media screen and (-webkit-min-device-pixel-ratio: 0) {
    input[type="range"] {
        overflow: hidden;
        width: 100%;
        -webkit-appearance: none;
        background-color: var(--ae-input-bg-color);
        border: var(--ae-input-border-size) solid var(--ae-input-border-color);
        position: relative;
        border-radius: var(--ae-border-radius);
    }

    input[type="range"]::after {
        content: "";
        position: absolute;
        height: 100%;
        background-image: var(--ae-slider-bg-overlay);
        width: 100%;
        left: 1px;
    }

    input[type="range"]::-webkit-slider-runnable-track {
        height: 14px;
        -webkit-appearance: none;
        color: var(--ae-primary-color);
        margin-top: -1px;
    }

    input[type="range"]::-webkit-slider-thumb {
        width: 0px;
        -webkit-appearance: none;
        height: 14px;
        cursor: ew-resize;
        background-color: var(--ae-primary-color);
        box-shadow: -1024px 0 0 1024px var(--ae-primary-color);
    }
}

#sidebar_secondary_tabs a span,
.default-desktop .mobile,
.default-auto .mobile{
    display:none;
}
.default-mobile .mobile{
    display: flex;
}
.default-mobile .split-container.params{
    min-width:100% !important;
}
.default-mobile .split-container.params ~ div{
    display:none;
}

#txt2img_results_generate_tabitem .generate,
#img2img_results_generate_tabitem .generate{
    flex-grow: 1;
}
.aside-labels #sidebar_secondary_tabs a span,
.main-labels #main-nav .xtabs-tab span,
.tab-labels [id$="2img_header"] span ,
.aside-labels #accordion-aside .xtabs-tab span {
    display: flex !important;
    text-transform: capitalize;
}
.main-labels #main-nav .xtabs-tab,
.tab-labels [id$="2img_header"] .xtabs-tab,
.aside-labels #accordion-aside .xtabs-tab {
    justify-content: flex-start;
}
#acc-arrow-button,
.aside-labels .accordion-bar > div{
    width:100%;
}

.aside-labels div#sidebar_secondary_tabs button {
    width: 100%;
    justify-content: flex-start;
}

.info-results-container {
    overflow-y: auto;
    max-height:33vh;
}
#layout_main_wrapper {
    padding-left: 0;
}
.template > .layout {
    padding-right: var(--ae-border-size);
}

.template > .full-height {
    padding-left: var(--ae-border-size);
    padding-right: var(--ae-border-size);
}
#split-right.v-expand{
    margin-left: calc(var(--ae-border-size) * -1);
}
#split-right:not(.v-expand) #accordion-aside{
    margin-left: var(--ae-border-size);
}
[toggle] .wrap{
    display:none;
}

.default-mobile #split-right:not(.v-expand) { 
    position: fixed;
    inset: var(--ae-panel-padding);
    z-index: 999;
    background-color: var(--ae-main-bg-color);
    outline: var(--ae-border-size) solid var(--ae-main-bg-color);
}
.default-mobile #split-right:not(.v-expand) #accordion-aside {
    margin-left: var(--ae-panel-padding);
}
.default-mobile .template > .full-height {
    padding: var(--ae-panel-padding);
}

@media (max-width: 768px) {
    .xtabs-tab span {
        display: none;
    }

    .default-auto .mobile{
        display: flex;
    }
    .default-auto .split-container.params{
        min-width:100% !important;
    }
    .default-auto .split-container.params ~ div{
        display:none;
    }
}

/* Firefox */
* {
    scrollbar-color: var(--ae-panel-border-color) var(--ae-main-bg-color) !important;
    scrollbar-width: thin !important;
}

input[type="range"]::-moz-range-progress {
    background-color: var(--ae-primary-color);
    height: 100%;
    background-image: var(--ae-slider-bg-overlay);
}
  
input[type="range"]::-moz-range-track {
    width: 100%;
    height: 100%;
    background-color: var(--ae-input-bg-color);
    border: none;
    border-radius: 0px;
    position: relative;
    background-image: var(--ae-slider-bg-overlay);
    opacity: 1;
}
/* ... */

